--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class </title>
     <link rel="icon" href="image/12.jpeg">
-    <link rel="stylesheet" href="/animation/css/order.css">
-    <link rel="stylesheet" href="/animation/css/2.css">
+    <link rel="stylesheet" href="order.css">
+    <link rel="stylesheet" href="2.css">
 </head>
 <body>
     <div class="box-menu">
